- Embedding the content of configuration files in the show-status
  page is significantly faster now. For a largish action file (1 MB)
  a speedup of about 2450 times has been measured. This is mostly
  interesting if you are using large action files or regularly use
  Privoxy-Regression-Test while running Privoxy through Valgrind,
  for stock configuration files it doesn't really matter.
- The obsolete kill-popups action has been removed as the
  PCRS-based popup filters can do the same and are less
  unreliable.
- The inspect-jpegs action has been removed.
- The send-wafer and send-vanilla-wafer actions have been removed.
  They weren't particular useful and their behaviour could be emulated
  with add-header anyway.

*** Version 3.0.8 ***

- Fixed a small memory leak when listen-address only specifies the port.
- The source tar balls now include Privoxy-Regression-Test which
  (upon other things) can be used to automatically detect some
  packaging problems. Packagers are welcome to give it a try.
- Reverted a change in 3.0.7 that caused path patterns to be checked
  even if the host pattern match already failed. While this doesn't
  noticeable affect the performance, it makes it less likely to run
  out of stack space with overly-complex path patterns the user might
  have added.
- Updated the msn, yahoo and google filters to work as advertised again.
- The warning message shown by the show-status CGI page is easier to
  understand. Previously it wasn't clear that the error message
  is shown below the invalid directive. (Reported by Lee)
- When regenerating Content-Disposition headers the more common
  spelling is used for the name. Previously it was written without caps.
- Less confusing log message if the content type isn't overwritten
  because force-text-type wasn't used but the old type doesn't look
  like content that would be filtered normally.
- Better log messages if the user tries to execute filters that
  don't exist.